--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+.list {
+  list-style: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,14 +17,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #c2dbf6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(251, 250, 251);
+  
 }
 
 .App-link {
